--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ jobs:
 
       - name: Authenticate GitHub CLI with Personal Access Token
         run: |
-          echo "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" | gh auth login --with-token
+          echo "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" | gh auth login --with-token
 
       - name: Check Codespace Status and Keep Alive
         run: |
-          CODESPACE_NAME="redesigned space robot"
+          CODESPACE_NAME="redesigned-space-robot-v6qw7wqp64772jrq"
           STATUS=$(gh codespace list --json name,state | jq -r --arg name "$CODESPACE_NAME" '.[] | select(.name == $name) | .state')
 
           if [ -z "$STATUS" ]; then
